--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Registration</title>
+    <link href="../static/css/registration_style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+<button id="backBtn">The Way Back Button</button>
+<h1>The Amazing Registration Page</h1>
+<label>Name</label>
+<input type="text" class="inputBox" id="nameInp">    <span class="warning" id="nameWarning"></span><br><br>
+<label>Email</label>
+<input type="email" class="inputBox" id="emailInp">   <span class="warning" id="emailWarning"></span><br><br>
+<label>Password</label>
+<input type="password" class="inputBox" id="passwordInp">    <span class="warning" id="passwordWarning"></span><br><br>
+<label>Phone Number</label>
+<input type="tel" class="inputBox" id="telInp">     <span class="warning" id="telWarning"></span><br><br>
+<br>
+<button id="regBtn">Register</button>
 
+<script src="../static/js/registration.js" type="text/javascript"></script>
 </body>
 </html>
