--- a/src/main/resources/templates/activity_gallery.html
+++ b/src/main/resources/templates/activity_gallery.html
@@ -5,14 +5,22 @@
     <title>Activities</title>
     <link href="../static/css/gallery.css" rel="stylesheet" type="text/css">
 </head>
+<header>
+    <img src="../static/images/logo.png" class="logo" alt="AdventureXP logo">
+</header>
 <body>
+<div class="banner">
+
+</div>
 <h1>AdventureXP's Adventures Activities</h1>
 <div class="grid-container">
     <div class="grid-item">
-        <h2>Paintball</h2>
-        <p>I paintball deles I op i to eller flere hold og spiller smaa runder af 10 minutter mod hinanden. Der betales
+        <img class="activity-img" src="https://i.ibb.co/mbB7dKX/james-fitzgerald-7g-PFYUo-A5mo-unsplash.jpg" alt="james-fitzgerald-7g-PFYUo-A5mo-unsplash" border="0">
+        <h2 class="activity-name">Paintball</h2>
+        <p class="activity-desc">I paintball deles I op i to eller flere hold og spiller smaa runder af 10 minutter mod hinanden. Der betales
             1kr pr. kugle I bruger, samt leje af bane inkl. instruktoer paa hhv 150kr/t og 300kr/t for den lille og
             store bane.</p>
+        <a class="bookingBtn" href="/booking/1">Book</a>
     </div>
     <div class="grid-item">
         <h2>Paintball</h2>
