--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -6,18 +6,25 @@
     <link href="../static/css/registration_style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+<header>
+    <img src="../static/images/logo.png" class="logo" alt="AdventureXP logo">
+</header>
 <button id="backBtn">The Way Back Button</button>
-<h1>The Amazing Registration Page</h1>
-<label>Name</label>
-<input type="text" class="inputBox" id="nameInp">    <span class="warning" id="nameWarning"></span><br><br>
-<label>Email</label>
-<input type="email" class="inputBox" id="emailInp">   <span class="warning" id="emailWarning"></span><br><br>
-<label>Password</label>
-<input type="password" class="inputBox" id="passwordInp">    <span class="warning" id="passwordWarning"></span><br><br>
-<label>Phone Number</label>
-<input type="tel" class="inputBox" id="telInp">     <span class="warning" id="telWarning"></span><br><br>
-<br>
-<button id="regBtn">Register</button>
+
+<div class="form">
+    <h1>The Amazing Adventure Alley Registration</h1><br>
+    <label>Name</label>
+    <input type="text" class="inputBox" id="nameInp">    <span class="warning" id="nameWarning"></span><br><br>
+    <label>Email</label>
+    <input type="email" class="inputBox" id="emailInp">   <span class="warning" id="emailWarning"></span><br><br>
+    <label>Password</label>
+    <input type="password" class="inputBox" id="passwordInp">    <span class="warning" id="passwordWarning"></span><br><br>
+    <label>Phone Number</label>
+    <input type="tel" class="inputBox" id="telInp">     <span class="warning" id="telWarning"></span><br><br>
+    <br>
+    <button id="regBtn">Register</button>
+</div>
+
 
 <script src="../static/js/registration.js" type="text/javascript"></script>
 </body>
