Description text overflow constraint added

--- a/src/main/resources/static/css/gallery.css
+++ b/src/main/resources/static/css/gallery.css
@@ -21,6 +21,7 @@
 .activity-desc{
     margin-left: 5px;
     margin-right: 5px;
+    text-overflow: ellipsis;
 }
 .activity-duration{
     font-weight: bold;
