--- a/src/main/resources/static/css/storeItemManageStyle.css
+++ b/src/main/resources/static/css/storeItemManageStyle.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
+
+body{
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    background-color: #eee;
+}
+
 #pricereq, #namereq{
     color:red;
 }
@@ -7,29 +15,52 @@
     text-align: center;
 }
 .label{
-    width: 40px;
+    width: 50px;
     display: inline-block;
 }
+
 .input{
     display: inline-block;
     text-align: center;
+    font-family: inherit;
 }
+button{
+    font-family: inherit;
+}
+
 .priceField,.nameField{
     margin: 5px;
 }
 .addItemForm{
-    height: 90px;
+    height: auto;
     width: 360px;
     text-align: center;
     margin: auto;
+    border: 1px solid;
+    border-radius: 5px;
+    padding:5px;
+    background-color: white;
 }
 .itemListing{
     height: auto;
-    width: 100px;
+    width: 150px;
     text-align: center;
-    margin: auto;
+    margin: 5px;
     display: inline-block;
+    border: 1px solid;
+    border-radius: 5px;
+    padding: 5px;
+    background-color: white;
 }
-body{
+
+.edit-save-btn{
+    margin: 5px;
+}
+
+.edit-name-input{
     text-align: center;
+    display:none;
+    width: 140px;
+    max-width: 150px;
+    font-family: inherit;
 }
