Added post api and create for activities.

--- a/src/main/resources/templates/create_activities.html
+++ b/src/main/resources/templates/create_activities.html
@@ -5,7 +5,27 @@
     <title>Create Activity</title>
 </head>
 <body>
-<h1>HEJ MED DIG</h1>
+<h1>Create activity</h1>
+
+<span>Name:</span>
+<br>
+<input type="text" id="name">
+<br>
+<span>Minimum duration:</span>
+<br>
+<input type="number" id="min-duration">
+<br>
+<span>Maximum participants: </span>
+<br>
+<input type="number" id="max-participants">
+<br>
+<span>Description:</span>
+<br>
+<textarea id="description"></textarea>
+
+<button type="button" onclick="save()">Save</button>
+
+<script src="../static/js/createActivity.js"></script>
 
 </body>
 </html>
