--- a/src/main/resources/static/css/storeItemManageStyle.css
+++ b/src/main/resources/static/css/storeItemManageStyle.css
@@ -47,7 +47,7 @@ button{
     text-align: center;
     margin: 5px;
     display: inline-block;
-    border: 1px solid;
+    border: 1px solid #8c8c8c;
     border-radius: 5px;
     padding: 5px;
     background-color: white;
