--- a/src/main/resources/templates/booking.html
+++ b/src/main/resources/templates/booking.html
@@ -3,121 +3,207 @@
 <head>
     <meta charset="UTF-8">
     <title>Booking</title>
+    <link href="../static/css/booking.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div>
-    <h1>Booking overview</h1>
+    <h1>Booking overview: <span class="act-title"><!--Gocart --></span></h1>
+    <p class="info-small">Minimum Duration: <span class="minDur"><!--60 --></span> hour(s)</p>
+    <p class="info-small">Maximum Participants: <span class="maxPar"><!--10 --></span> alien(s)</p>
+    <div class="grid-container">
+        <div></div>
+        <div class="info">
+            <p class="date mon"><!--1/3 --></p>
+            <p class="weekday">Monday</p>
+        </div>
+        <div class="info">
+            <p class="date tue"><!--2/3 --></p>
+            <p class="weekday">Tuesday</p>
+        </div>
+        <div class="info">
+            <p class="date wed"><!--3/3 --></p>
+            <p class="weekday">Wednesday</p>
+        </div>
+        <div class="info">
+            <p class="date thu"><!--4/3 --></p>
+            <p class="weekday">Thursday</p>
+        </div>
+        <div class="info">
+            <p class="date fri"><!--5/3 --></p>
+            <p class="weekday">Friday</p>
+        </div>
+        <div class="info">
+            <p class="date sat"><!--6/3 --></p>
+            <p class="weekday">Saturday</p>
+        </div>
+        <div class="info">
+            <p class="date sun"><!--7/3 --></p>
+            <p class="weekday">Sunday</p>
+        </div>
+        <div></div>
+        <div style="position: relative">
+            <span style="position: relative; top: 0px">-08:00-</span>
+            <span style="position: relative; top: 60px">-10:00-</span>
+            <span style="position: relative; top: 120px">-12:00-</span>
+            <span style="position: relative; top: 180px">-14:00-</span>
+            <span style="position: relative; top: 240px">-16:00-</span>
+            <span style="position: relative; top: 300px">-18:00-</span>
+            <span style="position: relative; top: 360px">-20:00-</span>
+        </div>
+        <div class="grid-item col1">
+            <!--<div class="reservation test1">
+                <p class="res-content">08:00-12:00</p>
+            </div>-->
+            <!--<div class="reservation test2">
+                <p class="res-content">12:30-14:30</p>
+            </div>-->
+            <!--<div class="reservation test3">
+                <p class="res-content">18:00-20:00</p>
+            </div>-->
+        </div>
+        <div class="grid-item col2"></div>
+        <div class="grid-item col3"></div>
+        <div class="grid-item col4">
+            <!--<div class="reservation test1">
+                <p class="res-content">08:00-12:00</p>
+            </div>-->
+        <!--<div class="reservation test2">
+            <p class="res-content">12:30-14:30</p>
+            </div>-->
+        </div>
+        <div class="grid-item col5"></div>
+        <div class="grid-item col6"></div>
+        <div class="grid-item col7">
+            <!-- <div class="reservation test1">
+                <p class="res-content">08:00-12:00</p>
+            </div>-->
+            <!--<div class="reservation test2">
+                <p class="res-content">12:30-14:30</p>
+            </div>-->
+        </div>
+        <div class="reservation-form">
+            <h2>-- Reserve --</h2>
+            <label>Start Time</label>
+            <select class="time startTime" id="startTime">
+                <option value="08:00">08:00</option>
+                <option value="08:15">08:15</option>
+                <option value="08:30">08:30</option>
+                <option value="08:45">08:45</option>
+                <option value="09:00">09:00</option>
+                <option value="09:15">09:15</option>
+                <option value="09:30">09:30</option>
+                <option value="09:45">09:45</option>
+                <option value="10:00">10:00</option>
+                <option value="10:15">10:15</option>
+                <option value="10:30">10:30</option>
+                <option value="10:45">10:45</option>
+                <option value="11:00">11:00</option>
+                <option value="11:15">11:15</option>
+                <option value="11:30">11:30</option>
+                <option value="11:45">11:45</option>
+                <option value="12:00">12:00</option>
+                <option value="12:15">12:15</option>
+                <option value="12:30">12:30</option>
+                <option value="12:45">12:45</option>
+                <option value="13:00">13:00</option>
+                <option value="13:15">13:15</option>
+                <option value="13:30">13:30</option>
+                <option value="13:45">13:45</option>
+                <option value="14:00">14:00</option>
+                <option value="14:15">14:15</option>
+                <option value="14:30">14:30</option>
+                <option value="14:45">14:45</option>
+                <option value="15:00">15:00</option>
+                <option value="15:15">15:15</option>
+                <option value="15:30">15:30</option>
+                <option value="15:45">15:45</option>
+                <option value="16:00">16:00</option>
+                <option value="16:15">16:15</option>
+                <option value="16:30">16:30</option>
+                <option value="16:45">16:45</option>
+                <option value="17:00">17:00</option>
+                <option value="17:15">17:15</option>
+                <option value="17:30">17:30</option>
+                <option value="17:45">17:45</option>
+                <option value="18:00">18:00</option>
+                <option value="18:15">18:15</option>
+                <option value="18:30">18:30</option>
+                <option value="18:45">18:45</option>
+                <option value="19:00">19:00</option>
+                <option value="19:15">19:15</option>
+                <option value="19:30">19:30</option>
+                <option value="19:45">19:45</option>
+            </select><br><br>
+
+            <label>End Time</label>
+            <select class="time endTime" id="endTime">
+                <option value="08:15">08:15</option>
+                <option value="08:30">08:30</option>
+                <option value="08:45">08:45</option>
+                <option value="09:00">09:00</option>
+                <option value="09:15">09:15</option>
+                <option value="09:30">09:30</option>
+                <option value="09:45">09:45</option>
+                <option value="10:00">10:00</option>
+                <option value="10:15">10:15</option>
+                <option value="10:30">10:30</option>
+                <option value="10:45">10:45</option>
+                <option value="11:00">11:00</option>
+                <option value="11:15">11:15</option>
+                <option value="11:30">11:30</option>
+                <option value="11:45">11:45</option>
+                <option value="12:00">12:00</option>
+                <option value="12:15">12:15</option>
+                <option value="12:30">12:30</option>
+                <option value="12:45">12:45</option>
+                <option value="13:00">13:00</option>
+                <option value="13:15">13:15</option>
+                <option value="13:30">13:30</option>
+                <option value="13:45">13:45</option>
+                <option value="14:00">14:00</option>
+                <option value="14:15">14:15</option>
+                <option value="14:30">14:30</option>
+                <option value="14:45">14:45</option>
+                <option value="15:00">15:00</option>
+                <option value="15:15">15:15</option>
+                <option value="15:30">15:30</option>
+                <option value="15:45">15:45</option>
+                <option value="16:00">16:00</option>
+                <option value="16:15">16:15</option>
+                <option value="16:30">16:30</option>
+                <option value="16:45">16:45</option>
+                <option value="17:00">17:00</option>
+                <option value="17:15">17:15</option>
+                <option value="17:30">17:30</option>
+                <option value="17:45">17:45</option>
+                <option value="18:00">18:00</option>
+                <option value="18:15">18:15</option>
+                <option value="18:30">18:30</option>
+                <option value="18:45">18:45</option>
+                <option value="19:00">19:00</option>
+                <option value="19:15">19:15</option>
+                <option value="19:30">19:30</option>
+                <option value="19:45">19:45</option>
+                <option value="20:00">20:00</option>
+            </select><br><br>
+
+            <input type="date" class="date-inp">
+            <br><br>
+            <button type="button" class="bookingBtn">Book</button>
+            <br><br>
+            <span class="warn"></span>
+        </div>
+    </div>
+    <br>
+    <div>
+        <button class="pastBtn">👈 Past week</button>
+        <span class="weekCount"><!--1 --></span><span> of 5</span>
+        <button class="nextBtn">Next week 👉</button>
+    </div>
 </div>
 <div>
-    <h1>Reservation form</h1>
-    <label>Start Time</label>
-    <select id="startTime">
-        <option value="08:00">08:00</option>
-        <option value="08:15">08:15</option>
-        <option value="08:30">08:30</option>
-        <option value="08:45">08:45</option>
-        <option value="09:00">09:00</option>
-        <option value="09:15">09:15</option>
-        <option value="09:30">09:30</option>
-        <option value="09:45">09:45</option>
-        <option value="10:00">10:00</option>
-        <option value="10:15">10:15</option>
-        <option value="10:30">10:30</option>
-        <option value="10:45">10:45</option>
-        <option value="11:00">11:00</option>
-        <option value="11:15">11:15</option>
-        <option value="11:30">11:30</option>
-        <option value="11:45">11:45</option>
-        <option value="12:00">12:00</option>
-        <option value="12:15">12:15</option>
-        <option value="12:30">12:30</option>
-        <option value="12:45">12:45</option>
-        <option value="13:00">13:00</option>
-        <option value="13:15">13:15</option>
-        <option value="13:30">13:30</option>
-        <option value="13:45">13:45</option>
-        <option value="14:00">14:00</option>
-        <option value="14:15">14:15</option>
-        <option value="14:30">14:30</option>
-        <option value="14:45">14:45</option>
-        <option value="15:00">15:00</option>
-        <option value="15:15">15:15</option>
-        <option value="15:30">15:30</option>
-        <option value="15:45">15:45</option>
-        <option value="16:00">16:00</option>
-        <option value="16:15">16:15</option>
-        <option value="16:30">16:30</option>
-        <option value="16:45">16:45</option>
-        <option value="17:00">17:00</option>
-        <option value="17:15">17:15</option>
-        <option value="17:30">17:30</option>
-        <option value="17:45">17:45</option>
-        <option value="18:00">18:00</option>
-        <option value="18:15">18:15</option>
-        <option value="18:30">18:30</option>
-        <option value="18:45">18:45</option>
-        <option value="19:00">19:00</option>
-        <option value="19:15">19:15</option>
-        <option value="19:30">19:30</option>
-        <option value="19:45">19:45</option>
-    </select><br>
 
-    <label>End Time</label>
-    <select id="endTime">
-        <option value="08:15">08:15</option>
-        <option value="08:30">08:30</option>
-        <option value="08:45">08:45</option>
-        <option value="09:00">09:00</option>
-        <option value="09:15">09:15</option>
-        <option value="09:30">09:30</option>
-        <option value="09:45">09:45</option>
-        <option value="10:00">10:00</option>
-        <option value="10:15">10:15</option>
-        <option value="10:30">10:30</option>
-        <option value="10:45">10:45</option>
-        <option value="11:00">11:00</option>
-        <option value="11:15">11:15</option>
-        <option value="11:30">11:30</option>
-        <option value="11:45">11:45</option>
-        <option value="12:00">12:00</option>
-        <option value="12:15">12:15</option>
-        <option value="12:30">12:30</option>
-        <option value="12:45">12:45</option>
-        <option value="13:00">13:00</option>
-        <option value="13:15">13:15</option>
-        <option value="13:30">13:30</option>
-        <option value="13:45">13:45</option>
-        <option value="14:00">14:00</option>
-        <option value="14:15">14:15</option>
-        <option value="14:30">14:30</option>
-        <option value="14:45">14:45</option>
-        <option value="15:00">15:00</option>
-        <option value="15:15">15:15</option>
-        <option value="15:30">15:30</option>
-        <option value="15:45">15:45</option>
-        <option value="16:00">16:00</option>
-        <option value="16:15">16:15</option>
-        <option value="16:30">16:30</option>
-        <option value="16:45">16:45</option>
-        <option value="17:00">17:00</option>
-        <option value="17:15">17:15</option>
-        <option value="17:30">17:30</option>
-        <option value="17:45">17:45</option>
-        <option value="18:00">18:00</option>
-        <option value="18:15">18:15</option>
-        <option value="18:30">18:30</option>
-        <option value="18:45">18:45</option>
-        <option value="19:00">19:00</option>
-        <option value="19:15">19:15</option>
-        <option value="19:30">19:30</option>
-        <option value="19:45">19:45</option>
-        <option value="20:00">20:00</option>
-    </select>
-
-
-
-
-
+    <script src="../static/js/booking.js" type="text/javascript"></script>
 </div>
 </body>
 </html>
