--- a/src/main/resources/templates/store.html
+++ b/src/main/resources/templates/store.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Cashier interface</title>
     <link rel="stylesheet" href="../static/css/cashierInterface.css" type="text/css">
 </head>
 <body>
+    <div>
+        <div class="nav-buttons"><a th:href="@{/emenu}"><button>Menu</button></a></div>
+        <div class="nav-buttons"><button onclick="window.location.reload()">Reload</button></div>
+    </div>
     <!-- Generated in JS -->
     <div id="outer-list-div">
         <div id="list-div">
