Out commented test data

--- a/src/main/resources/templates/booking_my.html
+++ b/src/main/resources/templates/booking_my.html
@@ -15,7 +15,7 @@
             <h1>Booking editor</h1>
         </div>
         <div class="grid-item res-con">
-            <div class="res-box">
+            <!-- <div class="res-box">
                 <h2 class="res-title"><span>Paintball</span></h2>
                 <p class="res-date">Date: <span>2021-03-23</span></p>
                 <p class="res-time">Time: <span>10:00-12:00</span></p>
@@ -39,7 +39,7 @@
                 <h2 class="res-title">Activity: <span>Paintball</span></h2>
                 <p class="res-date">Date: <span>2021-03-23</span></p>
                 <p class="res-time">Time: <span>10:00-12:00</span></p>
-            </div>
+            </div>-->
         </div>
         <div class="grid-item">
             <div class="form">
