Fixed dynamic booking loading and gallery book links

--- a/src/main/resources/templates/activity_gallery.html
+++ b/src/main/resources/templates/activity_gallery.html
@@ -20,7 +20,7 @@
         <p class="activity-desc">I paintball deles I op i to eller flere hold og spiller smaa runder af 10 minutter mod hinanden. Der betales
             1kr pr. kugle I bruger, samt leje af bane inkl. instruktoer paa hhv 150kr/t og 300kr/t for den lille og
             store bane.</p>
-        <a class="bookingBtn" href="/booking/1">Book</a>
+        <a class="bookingBtn" href="1">Book</a>
     </div>
     <div class="grid-item">
         <h2>Paintball</h2>
