--- a/src/main/resources/templates/activity_gallery.html
+++ b/src/main/resources/templates/activity_gallery.html
@@ -14,6 +14,7 @@
 </div>
 <h1>AdventureXP's Adventures Activities</h1>
 <div class="grid-container">
+    <!--
     <div class="grid-item">
         <img class="activity-img" src="https://i.ibb.co/mbB7dKX/james-fitzgerald-7g-PFYUo-A5mo-unsplash.jpg" alt="james-fitzgerald-7g-PFYUo-A5mo-unsplash" border="0">
         <h2 class="activity-name">Paintball</h2>
@@ -69,7 +70,7 @@
         <p>I paintball deles I op i to eller flere hold og spiller smaa runder af 10 minutter mod hinanden. Der betales
             1kr pr. kugle I bruger, samt leje af bane inkl. instruktoer paa hhv 150kr/t og 300kr/t for den lille og
             store bane.</p>
-    </div>
+    </div>-->
 </div>
 
 <script src="../static/js/gallery.js" type="text/javascript"></script>
