Added temp nav links

--- a/src/main/resources/templates/activity_gallery.html
+++ b/src/main/resources/templates/activity_gallery.html
@@ -6,6 +6,17 @@
     <link href="../static/css/gallery.css" rel="stylesheet" type="text/css">
 </head>
 <header>
+    <a href="/activities/gallery">Gallery  </a>
+    <span> | </span><a href="/bookings">My Bookings</a>
+    <span> | </span><a href="/booking">Booking</a>
+    <span> | </span><a href="/work-schedule">Work Schedule</a>
+    <span> | </span><a href="/registration/register">Register</a>
+    <span> | </span><a href="/activities">Activities</a>
+    <span> | </span><a href="/activities/create">Create Activity</a>
+    <span> | </span><a href="/store">Store</a>
+    <span> | </span><a href="/store/manage">Manage Store</a>
+    <span> | </span><a href="/logout">Logout</a>
+    <span> | </span><a href="/login">Login</a>
     <img src="../static/images/logo.png" class="logo" alt="AdventureXP logo">
 </header>
 <body>
