--- a/src/main/resources/templates/booking_my.html
+++ b/src/main/resources/templates/booking_my.html
@@ -6,6 +6,19 @@
     <link href="../static/css/booking_my.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+<header>
+    <a href="/activities/gallery">Gallery  </a>
+    <span> | </span><a href="/bookings">My Bookings</a>
+    <span> | </span><a href="/booking">Booking</a>
+    <span> | </span><a href="/work-schedule">Work Schedule</a>
+    <span> | </span><a href="/registration/register">Register</a>
+    <span> | </span><a href="/activities">Activities</a>
+    <span> | </span><a href="/activities/create">Create Activity</a>
+    <span> | </span><a href="/store">Store</a>
+    <span> | </span><a href="/store/manage">Manage Store</a>
+    <span> | </span><a href="/logout">Logout</a>
+    <span> | </span><a href="/login">Login</a>
+</header>
 <div>
     <div class="grid-container">
         <div class="grid-item">
