--- a/src/main/resources/templates/employee-menu.html
+++ b/src/main/resources/templates/employee-menu.html
@@ -39,7 +39,7 @@
             </div></div>
         </div></a>
 
-        <a th:href="@{/}"><div class="menu-element">
+        <a th:href="@{/work-schedule}"><div class="menu-element">
             <div class="menu-element-inner"><div class="menu-element-span">
                 Work schedule
             </div></div>
