--- a/src/main/resources/static/css/registration_style.css
+++ b/src/main/resources/static/css/registration_style.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
+@import "navbarStyle.css";
+
 body{    font-family: 'Poppins', sans-serif;
 }
 .warning {
@@ -8,17 +10,7 @@ body{    font-family: 'Poppins', sans-serif;
 .inputBox {
     color: black;
 }
-header{
-    background-color: #FED767;
-    width: 100%;
-}
-.logo{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 15%;
-    alignment: center;
-}
+
 .form{
     margin-left: auto;
     margin-right: auto;
