--- a/src/main/resources/templates/activities.html
+++ b/src/main/resources/templates/activities.html
@@ -7,8 +7,17 @@
     <link href="../static/css/activities.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+<div style="text-align: left">
+    <div class="nav-buttons"><a th:href="@{/emenu}"><button>Menu</button></a></div>
+    <div class="nav-buttons"><button onclick="window.location.reload()">Reload</button></div>
+</div>
 <div id="master-div">
-    <h1>Activities <a th:href="@{/activities/create}"><button type="button" class="btn goToCreateActivity">Create activity</button></a></h1>
+    <div class="header-div">
+        <h1>Activities </h1>
+        <a th:href="@{/activities/create}"><button type="button" class="btn goToCreateActivity">Create activity</button></a>
+    </div>
+    <br>
+
 
 </div>
 <script src="../static/js/activities.js"></script>
