--- a/src/main/resources/templates/activity_gallery.html
+++ b/src/main/resources/templates/activity_gallery.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Activities</title>
     <link href="../static/css/gallery.css" rel="stylesheet" type="text/css">
 </head>
 <header>
-    <a href="/activities/gallery">Gallery  </a>
-    <span> | </span><a href="/bookings">My Bookings</a>
-    <span> | </span><a href="/booking">Booking</a>
-    <span> | </span><a href="/work-schedule">Work Schedule</a>
-    <span> | </span><a href="/registration/register">Register</a>
-    <span> | </span><a href="/activities">Activities</a>
-    <span> | </span><a href="/activities/create">Create Activity</a>
-    <span> | </span><a href="/store">Store</a>
-    <span> | </span><a href="/store/manage">Manage Store</a>
-    <span> | </span><a href="/logout">Logout</a>
-    <span> | </span><a href="/login">Login</a>
-    <img src="../static/images/logo.png" class="logo" alt="AdventureXP logo">
+    <div>
+        <img src="../static/images/logo.png" class="logo2" alt="AdventureXP logo">
+        <div id="hidden-border-div"></div>
+        <div class="navbar">
+            <div class="navbar-wrapper">
+                <a th:href="@{/activities/gallery}"><div class="navbar-link">Home</div></a>
+                <a th:href="@{/bookings}"><div class="navbar-link" id="my-bookings">My bookings</div></a>
+                <a ><div class="navbar-link">3</div></a>
+            </div>
+            <div class="login-wrapper">
+                <a th:href="@{/registration/register}"><div class="navbar-link-last">Register</div></a>
+                <a th:href="@{/login}"><div class="navbar-link" id="login-div">Login</div></a>
+                <a th:href="@{/logout}"><div class="navbar-link" id="logout-div">Logout</div></a>
+            </div>
+        </div>
+    </div>
 </header>
 <body>
 <div class="banner">
 
 </div>
-<h1>AdventureXP's Adventures Activities</h1>
+<h1 style="text-align: center;">AdventureXP's Adventures Activities</h1>
+<br>
 <div class="grid-container">
     <!--
     <div class="grid-item">
@@ -85,5 +90,6 @@
 </div>
 
 <script src="../static/js/gallery.js" type="text/javascript"></script>
+<script src="../static/js/navbar.js" type="text/javascript"></script>
 </body>
 </html>
