--- a/src/main/resources/templates/work-schedule.html
+++ b/src/main/resources/templates/work-schedule.html
@@ -1,24 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Work Schedule</title>
     <link href="../static/css/work-schedule.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<header>
-    <a href="/activities/gallery">Gallery  </a>
-    <span> | </span><a href="/bookings">My Bookings</a>
-    <span> | </span><a href="/booking">Booking</a>
-    <span> | </span><a href="/work-schedule">Work Schedule</a>
-    <span> | </span><a href="/registration/register">Register</a>
-    <span> | </span><a href="/activities">Activities</a>
-    <span> | </span><a href="/activities/create">Create Activity</a>
-    <span> | </span><a href="/store">Store</a>
-    <span> | </span><a href="/store/manage">Manage Store</a>
-    <span> | </span><a href="/logout">Logout</a>
-    <span> | </span><a href="/login">Login</a>
-</header>
+<div style="text-align: left;">
+    <div class="nav-buttons"><a th:href="@{/emenu}"><button>Menu</button></a></div>
+    <div class="nav-buttons"><button onclick="window.location.reload()">Reload</button></div>
+</div>
 <div>
     <h1 class="title"></h1>
     <div class="divide">
