--- a/src/main/resources/static/css/booking.css
+++ b/src/main/resources/static/css/booking.css
@@ -1,21 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
 @import "navbarStyle.css";
 body{    font-family: 'Poppins', sans-serif;
+    /*background-color: #eee;*/
 }
 .grid-container{
     display: grid;
-    margin-left: 5%;
-    margin-right: 5%;
+    margin:auto;
     grid-template-columns: 50px 120px 120px 120px 120px 120px 120px 120px 300px;
     column-gap: 10px;
     row-gap: 0;
+    text-align: center;
+    width: 1271px;
+
 }
 .grid-item{
     width: 100%;
     height: 500px;
 
     padding: 0;
-    background-color: #e7e7e7;
+    background-color: #bdbdbd59;
     overflow: hidden;
     border-radius: 4px;
     position: relative;
@@ -26,9 +29,12 @@ body{    font-family: 'Poppins', sans-serif;
 .reservation{
     position: absolute;
     background-color: #fd5069;
+    color:black;
     width: 110px;
     margin: 10px 5px;
     border-radius: 5px;
+    line-height: 32px;
+
 }
 .test1{
     top: 0;
@@ -47,8 +53,10 @@ body{    font-family: 'Poppins', sans-serif;
     font-weight: bold;
 }
 .reservation-form{
-    border: solid 2px;
+    border: solid 1px #00000040;
     padding: 10px;
+    border-radius: 10px;
+    background-color: #fcfcfc;
 }
 .weekday{
     margin: 5px;
@@ -70,4 +78,8 @@ body{    font-family: 'Poppins', sans-serif;
 }
 .warn{
     color: red;
+}
+
+button, input, select{
+    font-family: inherit;
 }
