--- a/src/main/resources/static/css/gallery.css
+++ b/src/main/resources/static/css/gallery.css
@@ -2,20 +2,21 @@
 @import "navbarStyle.css";
 
 body{    font-family: 'Poppins', sans-serif;
-    background-color: #eee;
+
 }
 .grid-container{
     display: grid;
-    margin-left: 10%;
-    margin-right: 10%;
-    grid-template-columns: auto auto auto;
-    column-gap: 10px;
+    grid-template-columns: 322px 322px 322px;
+    column-gap: 30px;
     row-gap: 30px;
+    width: 1027px;
+    margin:auto;
+    text-align: center;
 }
 .grid-item{
     width: 300px;
     height: 500px;
-    border: solid 1px black;
+    border: solid 1px #00000040;
     background-color: #fcfcfc;
     border-radius: 30px;
     overflow: hidden;
@@ -42,9 +43,6 @@ body{    font-family: 'Poppins', sans-serif;
 .activity-participants{
     font-weight: bold;
     margin-left: 5px;
-}
-body{
-    background-color: #fcfcfc;
 }
 
 .banner{
