--- a/src/main/resources/static/css/registration_style.css
+++ b/src/main/resources/static/css/registration_style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
 @import "navbarStyle.css";
 
+
 body{    font-family: 'Poppins', sans-serif;
 }
 .warning {
@@ -15,8 +16,9 @@ body{    font-family: 'Poppins', sans-serif;
     margin-left: auto;
     margin-right: auto;
     width: 30%;
-    border: solid 5px;
+    border: 2px solid #00000040;
     border-radius: 5px;
+    text-align: center;
 }
 .inputBox{
     left: 50%;
@@ -28,4 +30,7 @@ body{    font-family: 'Poppins', sans-serif;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 15px;
+}
+button, input, select{
+    font-family: inherit;
 }
