--- a/src/main/resources/templates/booking_my.html
+++ b/src/main/resources/templates/booking_my.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Bookings</title>
@@ -7,170 +7,176 @@
 </head>
 <body>
 <header>
-    <a href="/activities/gallery">Gallery  </a>
-    <span> | </span><a href="/bookings">My Bookings</a>
-    <span> | </span><a href="/booking">Booking</a>
-    <span> | </span><a href="/work-schedule">Work Schedule</a>
-    <span> | </span><a href="/registration/register">Register</a>
-    <span> | </span><a href="/activities">Activities</a>
-    <span> | </span><a href="/activities/create">Create Activity</a>
-    <span> | </span><a href="/store">Store</a>
-    <span> | </span><a href="/store/manage">Manage Store</a>
-    <span> | </span><a href="/logout">Logout</a>
-    <span> | </span><a href="/login">Login</a>
-</header>
-<div>
-    <div class="grid-container">
-        <div class="grid-item">
-            <h1>My bookings</h1>
-        </div>
-        <div class="grid-item">
-            <h1>Booking editor</h1>
-        </div>
-        <div class="grid-item res-con">
-            <!-- <div class="res-box">
-                <h2 class="res-title"><span>Paintball</span></h2>
-                <p class="res-date">Date: <span>2021-03-23</span></p>
-                <p class="res-time">Time: <span>10:00-12:00</span></p>
+    <div>
+        <img src="../static/images/logo.png" class="logo2" alt="AdventureXP logo">
+        <div id="hidden-border-div"></div>
+        <div class="navbar">
+            <div class="navbar-wrapper">
+                <a th:href="@{/activities/gallery}"><div class="navbar-link">Home</div></a>
+                <a th:href="@{/bookings}"><div class="navbar-link" id="my-bookings">My bookings</div></a>
+                <a ><div class="navbar-link">3</div></a>
             </div>
-            <div class="res-box">
-                <h2 class="res-title">Activity: <span>Paintball</span></h2>
-                <p class="res-date">Date: <span>2021-03-23</span></p>
-                <p class="res-time">Time: <span>10:00-12:00</span></p>
-            </div>
-            <div class="res-box">
-                <h2 class="res-title">Activity: <span>Paintball</span></h2>
-                <p class="res-date">Date: <span>2021-03-23</span></p>
-                <p class="res-time">Time: <span>10:00-12:00</span></p>
-            </div>
-            <div class="res-box">
-                <h2 class="res-title">Activity: <span>Paintball</span></h2>
-                <p class="res-date">Date: <span>2021-03-23</span></p>
-                <p class="res-time">Time: <span>10:00-12:00</span></p>
-            </div>
-            <div class="res-box">
-                <h2 class="res-title">Activity: <span>Paintball</span></h2>
-                <p class="res-date">Date: <span>2021-03-23</span></p>
-                <p class="res-time">Time: <span>10:00-12:00</span></p>
-            </div>-->
-        </div>
-        <div class="grid-item">
-            <div class="form">
-                <label>Reservation ID: </label><input type="number" class="form-id" readonly><br><br>
-                <label>Activity: </label><input type="text" class="form-name" readonly><br><br>
-                <label>Start Time: </label>
-                <select class="time startTime" id="startTime">
-                    <option value="08:00">08:00</option>
-                    <option value="08:15">08:15</option>
-                    <option value="08:30">08:30</option>
-                    <option value="08:45">08:45</option>
-                    <option value="09:00">09:00</option>
-                    <option value="09:15">09:15</option>
-                    <option value="09:30">09:30</option>
-                    <option value="09:45">09:45</option>
-                    <option value="10:00">10:00</option>
-                    <option value="10:15">10:15</option>
-                    <option value="10:30">10:30</option>
-                    <option value="10:45">10:45</option>
-                    <option value="11:00">11:00</option>
-                    <option value="11:15">11:15</option>
-                    <option value="11:30">11:30</option>
-                    <option value="11:45">11:45</option>
-                    <option value="12:00">12:00</option>
-                    <option value="12:15">12:15</option>
-                    <option value="12:30">12:30</option>
-                    <option value="12:45">12:45</option>
-                    <option value="13:00">13:00</option>
-                    <option value="13:15">13:15</option>
-                    <option value="13:30">13:30</option>
-                    <option value="13:45">13:45</option>
-                    <option value="14:00">14:00</option>
-                    <option value="14:15">14:15</option>
-                    <option value="14:30">14:30</option>
-                    <option value="14:45">14:45</option>
-                    <option value="15:00">15:00</option>
-                    <option value="15:15">15:15</option>
-                    <option value="15:30">15:30</option>
-                    <option value="15:45">15:45</option>
-                    <option value="16:00">16:00</option>
-                    <option value="16:15">16:15</option>
-                    <option value="16:30">16:30</option>
-                    <option value="16:45">16:45</option>
-                    <option value="17:00">17:00</option>
-                    <option value="17:15">17:15</option>
-                    <option value="17:30">17:30</option>
-                    <option value="17:45">17:45</option>
-                    <option value="18:00">18:00</option>
-                    <option value="18:15">18:15</option>
-                    <option value="18:30">18:30</option>
-                    <option value="18:45">18:45</option>
-                    <option value="19:00">19:00</option>
-                    <option value="19:15">19:15</option>
-                    <option value="19:30">19:30</option>
-                    <option value="19:45">19:45</option>
-                </select><br><br>
-                <label>End Time: </label>
-                <select class="time endTime" id="endTime">
-                    <option value="08:15">08:15</option>
-                    <option value="08:30">08:30</option>
-                    <option value="08:45">08:45</option>
-                    <option value="09:00">09:00</option>
-                    <option value="09:15">09:15</option>
-                    <option value="09:30">09:30</option>
-                    <option value="09:45">09:45</option>
-                    <option value="10:00">10:00</option>
-                    <option value="10:15">10:15</option>
-                    <option value="10:30">10:30</option>
-                    <option value="10:45">10:45</option>
-                    <option value="11:00">11:00</option>
-                    <option value="11:15">11:15</option>
-                    <option value="11:30">11:30</option>
-                    <option value="11:45">11:45</option>
-                    <option value="12:00">12:00</option>
-                    <option value="12:15">12:15</option>
-                    <option value="12:30">12:30</option>
-                    <option value="12:45">12:45</option>
-                    <option value="13:00">13:00</option>
-                    <option value="13:15">13:15</option>
-                    <option value="13:30">13:30</option>
-                    <option value="13:45">13:45</option>
-                    <option value="14:00">14:00</option>
-                    <option value="14:15">14:15</option>
-                    <option value="14:30">14:30</option>
-                    <option value="14:45">14:45</option>
-                    <option value="15:00">15:00</option>
-                    <option value="15:15">15:15</option>
-                    <option value="15:30">15:30</option>
-                    <option value="15:45">15:45</option>
-                    <option value="16:00">16:00</option>
-                    <option value="16:15">16:15</option>
-                    <option value="16:30">16:30</option>
-                    <option value="16:45">16:45</option>
-                    <option value="17:00">17:00</option>
-                    <option value="17:15">17:15</option>
-                    <option value="17:30">17:30</option>
-                    <option value="17:45">17:45</option>
-                    <option value="18:00">18:00</option>
-                    <option value="18:15">18:15</option>
-                    <option value="18:30">18:30</option>
-                    <option value="18:45">18:45</option>
-                    <option value="19:00">19:00</option>
-                    <option value="19:15">19:15</option>
-                    <option value="19:30">19:30</option>
-                    <option value="19:45">19:45</option>
-                    <option value="20:00">20:00</option>
-                </select><br><br>
-
-                <input type="date" class="date-inp"><br><br>
-                <button class="btn saveBtn">Save</button><button class="btn deleteBtn">Delete</button><br>
-                <p class="warn"></p>
+            <div class="login-wrapper">
+                <a th:href="@{/registration/register}"><div class="navbar-link-last">Register</div></a>
+                <a th:href="@{/login}"><div class="navbar-link" id="login-div">Login</div></a>
+                <a th:href="@{/logout}"><div class="navbar-link" id="logout-div">Logout</div></a>
             </div>
         </div>
     </div>
+</header>
+<br>
+<div class="grid-container">
+    <div class="grid-item">
+        <h1>My bookings</h1>
+    </div>
+    <div class="grid-item">
+        <h1>Booking editor</h1>
+    </div>
+    <div class="grid-item res-con">
+        <!-- <div class="res-box">
+            <h2 class="res-title"><span>Paintball</span></h2>
+            <p class="res-date">Date: <span>2021-03-23</span></p>
+            <p class="res-time">Time: <span>10:00-12:00</span></p>
+        </div>
+        <div class="res-box">
+            <h2 class="res-title">Activity: <span>Paintball</span></h2>
+            <p class="res-date">Date: <span>2021-03-23</span></p>
+            <p class="res-time">Time: <span>10:00-12:00</span></p>
+        </div>
+        <div class="res-box">
+            <h2 class="res-title">Activity: <span>Paintball</span></h2>
+            <p class="res-date">Date: <span>2021-03-23</span></p>
+            <p class="res-time">Time: <span>10:00-12:00</span></p>
+        </div>
+        <div class="res-box">
+            <h2 class="res-title">Activity: <span>Paintball</span></h2>
+            <p class="res-date">Date: <span>2021-03-23</span></p>
+            <p class="res-time">Time: <span>10:00-12:00</span></p>
+        </div>
+        <div class="res-box">
+            <h2 class="res-title">Activity: <span>Paintball</span></h2>
+            <p class="res-date">Date: <span>2021-03-23</span></p>
+            <p class="res-time">Time: <span>10:00-12:00</span></p>
+        </div>-->
+    </div>
+    <div class="grid-item">
+        <div class="form">
+            <label>Reservation ID: </label><input type="number" class="form-id" readonly><br><br>
+            <label>Activity: </label><input type="text" class="form-name" readonly><br><br>
+            <label>Start Time: </label>
+            <select class="time startTime" id="startTime">
+                <option value="08:00">08:00</option>
+                <option value="08:15">08:15</option>
+                <option value="08:30">08:30</option>
+                <option value="08:45">08:45</option>
+                <option value="09:00">09:00</option>
+                <option value="09:15">09:15</option>
+                <option value="09:30">09:30</option>
+                <option value="09:45">09:45</option>
+                <option value="10:00">10:00</option>
+                <option value="10:15">10:15</option>
+                <option value="10:30">10:30</option>
+                <option value="10:45">10:45</option>
+                <option value="11:00">11:00</option>
+                <option value="11:15">11:15</option>
+                <option value="11:30">11:30</option>
+                <option value="11:45">11:45</option>
+                <option value="12:00">12:00</option>
+                <option value="12:15">12:15</option>
+                <option value="12:30">12:30</option>
+                <option value="12:45">12:45</option>
+                <option value="13:00">13:00</option>
+                <option value="13:15">13:15</option>
+                <option value="13:30">13:30</option>
+                <option value="13:45">13:45</option>
+                <option value="14:00">14:00</option>
+                <option value="14:15">14:15</option>
+                <option value="14:30">14:30</option>
+                <option value="14:45">14:45</option>
+                <option value="15:00">15:00</option>
+                <option value="15:15">15:15</option>
+                <option value="15:30">15:30</option>
+                <option value="15:45">15:45</option>
+                <option value="16:00">16:00</option>
+                <option value="16:15">16:15</option>
+                <option value="16:30">16:30</option>
+                <option value="16:45">16:45</option>
+                <option value="17:00">17:00</option>
+                <option value="17:15">17:15</option>
+                <option value="17:30">17:30</option>
+                <option value="17:45">17:45</option>
+                <option value="18:00">18:00</option>
+                <option value="18:15">18:15</option>
+                <option value="18:30">18:30</option>
+                <option value="18:45">18:45</option>
+                <option value="19:00">19:00</option>
+                <option value="19:15">19:15</option>
+                <option value="19:30">19:30</option>
+                <option value="19:45">19:45</option>
+            </select><br><br>
+            <label>End Time: </label>
+            <select class="time endTime" id="endTime">
+                <option value="08:15">08:15</option>
+                <option value="08:30">08:30</option>
+                <option value="08:45">08:45</option>
+                <option value="09:00">09:00</option>
+                <option value="09:15">09:15</option>
+                <option value="09:30">09:30</option>
+                <option value="09:45">09:45</option>
+                <option value="10:00">10:00</option>
+                <option value="10:15">10:15</option>
+                <option value="10:30">10:30</option>
+                <option value="10:45">10:45</option>
+                <option value="11:00">11:00</option>
+                <option value="11:15">11:15</option>
+                <option value="11:30">11:30</option>
+                <option value="11:45">11:45</option>
+                <option value="12:00">12:00</option>
+                <option value="12:15">12:15</option>
+                <option value="12:30">12:30</option>
+                <option value="12:45">12:45</option>
+                <option value="13:00">13:00</option>
+                <option value="13:15">13:15</option>
+                <option value="13:30">13:30</option>
+                <option value="13:45">13:45</option>
+                <option value="14:00">14:00</option>
+                <option value="14:15">14:15</option>
+                <option value="14:30">14:30</option>
+                <option value="14:45">14:45</option>
+                <option value="15:00">15:00</option>
+                <option value="15:15">15:15</option>
+                <option value="15:30">15:30</option>
+                <option value="15:45">15:45</option>
+                <option value="16:00">16:00</option>
+                <option value="16:15">16:15</option>
+                <option value="16:30">16:30</option>
+                <option value="16:45">16:45</option>
+                <option value="17:00">17:00</option>
+                <option value="17:15">17:15</option>
+                <option value="17:30">17:30</option>
+                <option value="17:45">17:45</option>
+                <option value="18:00">18:00</option>
+                <option value="18:15">18:15</option>
+                <option value="18:30">18:30</option>
+                <option value="18:45">18:45</option>
+                <option value="19:00">19:00</option>
+                <option value="19:15">19:15</option>
+                <option value="19:30">19:30</option>
+                <option value="19:45">19:45</option>
+                <option value="20:00">20:00</option>
+            </select><br><br>
+
+            <input type="date" class="date-inp"><br><br>
+            <button class="btn saveBtn">Save</button><button class="btn deleteBtn">Delete</button><br>
+            <p class="warn"></p>
+        </div>
+    </div>
 </div>
+
 <div>
 </div>
 
 <script src="../static/js/booking_my.js" type="text/javascript"></script>
+<script src="../static/js/navbar.js" type="text/javascript"></script>
 </body>
 </html>
