--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -7,25 +7,20 @@
 </head>
 <body>
 <header>
-    <a href="/activities/gallery">Gallery  </a>
-    <span> | </span><a href="/bookings">My Bookings</a>
-    <span> | </span><a href="/booking">Booking</a>
-    <span> | </span><a href="/work-schedule">Work Schedule</a>
-    <span> | </span><a href="/registration/register">Register</a>
-    <span> | </span><a href="/activities">Activities</a>
-    <span> | </span><a href="/activities/create">Create Activity</a>
-    <span> | </span><a href="/store">Store</a>
-    <span> | </span><a href="/store/manage">Manage Store</a>
-    <span> | </span><a href="/logout">Logout</a>
-    <span> | </span><a href="/login">Login</a>
     <div>
         <img src="../static/images/logo.png" class="logo2" alt="AdventureXP logo">
+        <div id="hidden-border-div"></div>
         <div class="navbar">
-            <a ><div class="navbar-link">Home</div></a>
-            <a th:href="@{/activities/gallery}"><div class="navbar-link">Activities</div></a>
-            <a ><div class="navbar-link">Home</div></a>
-            <a ><div class="navbar-link">Home</div></a>
-            <a th:href="@{/registration/register}"><div class="navbar-link-last">Register</div></a>
+            <div class="navbar-wrapper">
+                <a th:href="@{/activities/gallery}"><div class="navbar-link">Home</div></a>
+                <a th:href="@{/bookings}"><div class="navbar-link" id="my-bookings">My bookings</div></a>
+                <a ><div class="navbar-link">3</div></a>
+            </div>
+            <div class="login-wrapper">
+                <a th:href="@{/registration/register}"><div class="navbar-link-last">Register</div></a>
+                <a th:href="@{/login}"><div class="navbar-link" id="login-div">Login</div></a>
+                <a th:href="@{/logout}"><div class="navbar-link" id="logout-div">Logout</div></a>
+            </div>
         </div>
     </div>
 </header>
@@ -46,5 +41,6 @@
 
 
 <script src="../static/js/registration.js" type="text/javascript"></script>
+<script src="../static/js/navbar.js" type="text/javascript"></script>
 </body>
 </html>
