Booking calendar done

--- a/src/main/resources/static/css/booking.css
+++ b/src/main/resources/static/css/booking.css
@@ -83,3 +83,7 @@ body{    font-family: 'Poppins', sans-serif;
 button, input, select{
     font-family: inherit;
 }
+
+button, input, select{
+    font-family: inherit;
+}
