--- a/src/main/resources/static/css/booking_my.css
+++ b/src/main/resources/static/css/booking_my.css
@@ -66,3 +66,6 @@ body{    font-family: 'Poppins', sans-serif;
 button, input, select{
     font-family: inherit;
 }
+button, input, select{
+    font-family: inherit;
+}
