--- a/src/main/resources/templates/bookings-calendar.html
+++ b/src/main/resources/templates/bookings-calendar.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<h1 id="h1">Hej</h1><div id="buttons-div"></div>
+<h1 id="h1"></h1><div id="buttons-div"></div>
 
 <div id="calendar-div"></div>
 
