--- a/src/main/resources/templates/employee-menu.html
+++ b/src/main/resources/templates/employee-menu.html
@@ -15,7 +15,7 @@
             </div></div>
         </div></a>
 
-        <a th:href="@{/}"><div class="menu-element">
+        <a th:href="@{/bookingcalendar}"><div class="menu-element">
             <div class="menu-element-inner"><div class="menu-element-span">
                 Booking calendar
             </div></div>
