--- a/src/main/resources/static/css/registration_style.css
+++ b/src/main/resources/static/css/registration_style.css
@@ -34,3 +34,6 @@ body{    font-family: 'Poppins', sans-serif;
 button, input, select{
     font-family: inherit;
 }
+button, input, select{
+    font-family: inherit;
+}
