--- a/src/main/resources/static/css/bookingsCalendar.css
+++ b/src/main/resources/static/css/bookingsCalendar.css
@@ -1,9 +1,20 @@
+@import "storeItemManageStyle.css";
 
 
 .daysDiv {
-    border: 1px solid black;
-    width: 20%;
-    height: 100px;
+    border: 1px solid #0000004d;
+    border-radius: 5px;
+    width: 15%;
+    height: auto;
     float: left;
     margin: 2px;
+    padding:5px;
+}
+.top-div{
+    margin-bottom:20px;
+}
+.caption-div{
+    font-size: 13pt;
+    font-weight: bold;
+    margin-bottom: 5px;
 }
